--- a/blank-2.html
+++ b/blank-2.html
@@ -19,18 +19,18 @@
 
 <body id="page-top">
     <div id="wrapper">
-        <nav class="navbar navbar-dark navbar-expand-md sticky-top align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
+        <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
             <div class="container-fluid d-flex flex-column p-0">
                 <hr class="sidebar-divider my-0">
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
                     <li class="nav-item">
                         <div class="row">
                             <div class="col">
-                                <h6 class="headingsize">Kerala Covid19</h6>
+                                <h1 class="headingsize">Kerala Covid19</h1>
                             </div>
-                        </div><a class="nav-link active" href="index.html"><i class="fas fa-expand"></i><span class="sizeincrease">&nbsp;Overall Analysis</span></a><a class="nav-link adddistance" href="blank-1.html#districtcontib"><i class="far fa-snowflake"></i><span class="sizeincrease">&nbsp;Districtwise status</span></a>
+                        </div><a class="nav-link" href="index.html"><i class="fas fa-expand"></i><span class="sizeincrease">&nbsp;Overall Analysis</span></a><a class="nav-link adddistance" href="blank-1.html#districtcontib"><i class="far fa-snowflake"></i><span class="sizeincrease">&nbsp;Districtwise status</span></a>
                         <a
-                            class="nav-link adddistance" href="blank-2.html"><i class="fas fa-vial"></i><span class="sizeincrease"><strong>&nbsp;Quarantine reports</strong></span></a><a class="nav-link adddistance" href="/index.html#todays-report"><span class="sizeincrease"></span></a><a class="nav-link adddistance"
+                            class="nav-link active adddistance" href="blank-2.html"><i class="fas fa-vial"></i><span class="sizeincrease"><strong>&nbsp;Quarantine reports</strong></span></a><a class="nav-link adddistance" href="/index.html#todays-report"><span class="sizeincrease"></span></a><a class="nav-link adddistance"
                                 href="/index.html#todays-report"><span class="sizeincrease"></span></a><a class="nav-link adddistance" href="/index.html#todays-report"><span class="sizeincrease"></span></a><a class="nav-link adddistance" href="/index.html#todays-report"><span class="sizeincrease"></span></a></li>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
@@ -139,7 +139,7 @@
                     </div>
                 </nav>
                 <div class="container-fluid">
-                    <h3 class="text-dark mb-1">&nbsp; &nbsp; Quarantine Analysis</h3>
+                    <h3 class="text-dark container-fluid">&nbsp; &nbsp; Quarantine Analysis</h3>
                 </div><img class="img-fluid" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Districtwise/reports/quarantine/current_status.png?raw=true"><img class="img-fluid" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Districtwise/reports/quarantine/consistant2day.png?raw=true">
                 <img
                     class="img-fluid" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Districtwise/reports/quarantine/districcontrib.png?raw=true"></div>
