--- a/blank-1.html
+++ b/blank-1.html
@@ -19,16 +19,16 @@
 
 <body id="page-top">
     <div id="wrapper">
-        <nav class="navbar navbar-dark navbar-expand-md sticky-top align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
+        <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
             <div class="container-fluid d-flex flex-column p-0">
                 <hr class="sidebar-divider my-0">
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
                     <li class="nav-item">
                         <div class="row">
                             <div class="col">
-                                <h6 class="headingsize">Kerala Covid19</h6>
+                                <h1 class="headingsize">Kerala Covid19</h1>
                             </div>
-                        </div><a class="nav-link active" href="index.html"><i class="fas fa-expand"></i><span class="sizeincrease">&nbsp;Overall Analysis</span></a><a class="nav-link adddistance" href="blank-1.html#districtcontib"><i class="far fa-snowflake"></i><span class="sizeincrease">&nbsp;Districtwise status</span></a>
+                        </div><a class="nav-link" href="index.html"><i class="fas fa-expand"></i><span class="sizeincrease">&nbsp;Overall Analysis</span></a><a class="nav-link active adddistance" href="blank-1.html#districtcontib"><i class="far fa-snowflake"></i><span class="sizeincrease">&nbsp;Districtwise status</span></a>
                         <a
                             class="nav-link adddistance" href="blank-2.html"><i class="fas fa-vial"></i><span class="sizeincrease"><strong>&nbsp;Quarantine reports</strong></span></a><a class="nav-link adddistance" href="/index.html#todays-report"><span class="sizeincrease"></span></a><a class="nav-link adddistance"
                                 href="/index.html#todays-report"><span class="sizeincrease"></span></a><a class="nav-link adddistance" href="/index.html#todays-report"><span class="sizeincrease"></span></a><a class="nav-link adddistance" href="/index.html#todays-report"><span class="sizeincrease"></span></a></li>
@@ -37,7 +37,7 @@
             </div>
         </nav>
         <div class="d-flex flex-column" id="content-wrapper">
-            <div id="content" class="img-fluid img-thumbnail">
+            <div id="content">
                 <nav class="navbar navbar-light navbar-expand bg-white shadow mb-4 topbar static-top">
                     <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle mr-3" id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button>
                         <form class="form-inline d-none d-sm-inline-block mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
@@ -138,13 +138,17 @@
                         </ul>
                     </div>
                 </nav>
-                <h5>&nbsp; &nbsp;Districtwise Analysis</h5><img class="img-fluid img-thumbnail" src="assets/img/districtwise/active_cases.png"><img class="img-fluid img-thumbnail" src="assets/img/districtwise/districtcontrib.png"><img class="img-fluid img-thumbnail" src="assets/img/districtwise/deathrate.png"></div>
-            <footer
-                class="bg-white sticky-footer">
+                <h4 class="container-fluid">Districtwise&nbsp; Analysis</h4>
+                <div class="container-fluid">
+                    <h3 class="text-dark mb-1"></h3>
+                </div><img class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Districtwise/reports/covid_case_study/active_cases.png?raw=true"><img class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Districtwise/reports/covid_case_study/districtcontrib.png?raw=true">
+                <img
+                    class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Districtwise/reports/covid_case_study/deathrate.png?raw=true"></div>
+            <footer class="bg-white sticky-footer">
                 <div class="container my-auto">
                     <div class="text-center my-auto copyright"><span>Copyright © KeralaCovid-19 2020</span></div>
                 </div>
-                </footer>
+            </footer>
         </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a></div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
