--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 
 <body id="page-top">
     <div id="wrapper">
-        <nav class="navbar navbar-dark navbar-expand-md sticky-top align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
+        <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
             <div class="container-fluid d-flex flex-column p-0">
                 <hr class="sidebar-divider my-0">
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
                     <li class="nav-item">
                         <div class="row">
                             <div class="col">
-                                <h6 class="headingsize">Kerala Covid19</h6>
+                                <h1 class="headingsize">Kerala Covid19</h1>
                             </div>
                         </div><a class="nav-link active" href="index.html"><i class="fas fa-expand"></i><span class="sizeincrease">&nbsp;Overall Analysis</span></a><a class="nav-link adddistance" href="blank-1.html#districtcontib"><i class="far fa-snowflake"></i><span class="sizeincrease">&nbsp;Districtwise status</span></a>
                         <a
-                            class="nav-link adddistance" href="blank-2.html"><i class="fas fa-vial"></i><span class="sizeincrease"><strong>&nbsp;Quarantine reports</strong></span></a><a class="nav-link adddistance" href="/index.html#todays-report"><span class="sizeincrease"></span></a><a class="nav-link adddistance"
-                                href="/index.html#todays-report"><span class="sizeincrease"></span></a><a class="nav-link adddistance" href="/index.html#todays-report"><span class="sizeincrease"></span></a><a class="nav-link adddistance" href="/index.html#todays-report"><span class="sizeincrease"></span></a></li>
+                            class="nav-link adddistance" href="blank-2.html"><i class="fas fa-vial"></i><span class="sizeincrease"><strong>&nbsp;Quarantine reports</strong></span></a><a class="nav-link active adddistance" href="/index.html#todays-report"><span class="sizeincrease"></span></a><a class="nav-link active adddistance"
+                                href="/index.html#todays-report"><span class="sizeincrease"></span></a><a class="nav-link active adddistance" href="/index.html#todays-report"><span class="sizeincrease"></span></a><a class="nav-link active adddistance" href="/index.html#todays-report"><span class="sizeincrease"></span></a></li>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
             </div>
@@ -40,7 +40,6 @@
             <div id="content">
                 <div class="container-fluid adddistance">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4"></div>
-                    <header></header>
                     <h1>&nbsp;Dashboard<em class="moveright"></em></h1>
                     <div class="row sizemax">
                         <div class="col-md-6 col-xl-3 mb-4">
@@ -147,7 +146,7 @@
                     <div class="row">
                         <div class="col offset-sm-1"><img class="img-fluid" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Statewise/reports/Overall.png?raw=true"></div>
                     </div>
-                    <h3 id="todays-report" class="container-fluid">Reports on 10 sep 2020</h3>
+                    <h1 id="todays-report">Reports on 10 sep 2020</h1>
                     <div class="row" id="currentstatus">
                         <div class="col">
                             <div class="row">
