added current status 11/09/2020

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <div class="row">
                         <div class="col offset-sm-1"><img class="img-fluid" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Statewise/reports/Overall.png?raw=true"></div>
                     </div>
-                    <h1 id="todays-report">Reports on 10 sep 2020</h1>
+                    <h2 id="todays-report" class="container-fluid">Reports on 11 sep 2020</h2>
                     <div class="row" id="currentstatus">
                         <div class="col">
                             <div class="row">
@@ -154,7 +154,7 @@
                                     <div class="card text-white bg-primary shadow">
                                         <div class="card-body">
                                             <p class="m-0">Total Active</p>
-                                            <p class="text-white-50 small m-0">26232</p>
+                                            <p class="text-white-50 small m-0">27880</p>
                                         </div>
                                     </div>
                                 </div>
@@ -162,7 +162,7 @@
                                     <div class="card text-white bg-success shadow">
                                         <div class="card-body">
                                             <p class="m-0">Patients Relived</p>
-                                            <p class="text-white-50 small m-0">1657</p>
+                                            <p class="text-white-50 small m-0">1326</p>
                                         </div>
                                     </div>
                                 </div>
@@ -170,7 +170,7 @@
                                     <div class="card text-white bg-info shadow">
                                         <div class="card-body">
                                             <p class="m-0">Today's Positive</p>
-                                            <p class="text-white-50 small m-0">3349</p>
+                                            <p class="text-white-50 small m-0">2988</p>
                                         </div>
                                     </div>
                                 </div>
@@ -178,7 +178,7 @@
                                     <div class="card text-white bg-warning shadow">
                                         <div class="card-body">
                                             <p class="m-0">Contact Cases</p>
-                                            <p class="text-white-50 small m-0">3058</p>
+                                            <p class="text-white-50 small m-0">3738</p>
                                         </div>
                                     </div>
                                 </div>
@@ -186,7 +186,7 @@
                                     <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
                                             <p class="m-0">Unknown Sources</p>
-                                            <p class="text-white-50 small m-0">266</p>
+                                            <p class="text-white-50 small m-0">285</p>
                                         </div>
                                     </div>
                                 </div>
@@ -194,7 +194,7 @@
                                     <div class="card text-white bg-secondary shadow">
                                         <div class="card-body">
                                             <p class="m-0">Death Rate</p>
-                                            <p class="text-white-50 small m-0">12</p>
+                                            <p class="text-white-50 small m-0">14</p>
                                         </div>
                                     </div>
                                 </div>
