--- a/blank.html
+++ b/blank.html
@@ -7,6 +7,7 @@
     <title>Blank Page - KeralaCovid-19</title>
     <meta name="description" content="Kerala Covid-19 Analysis">
     <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/logo.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/logo.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
@@ -45,10 +46,9 @@
                         </form>
                     </div>
                 </nav>
-                <h3 class="container-fluid">Statewise Analysis</h3>
-                <h1 class="container-fluid">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<img id="deathrate" class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Statewise/reports/Death_rate.png?raw=true">
+                <h3 class="container-fluid">Statewise Analysis<img class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Statewise/reports/Daily_Cases.png?raw=true"><img class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Statewise/reports/Contact_Cases.png?raw=true">
                     <img
-                        class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Statewise/reports/Daily_Cases.png?raw=true"><img id="contactcases" class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Statewise/reports/Contact_Cases_wrt_covidcases.png?raw=true"></h1>
+                        class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Statewise/reports/Death_rate.png?raw=true"><img class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Statewise/reports/Contact_Cases_wrt_covidcases.png?raw=true"></h3>
             </div>
             <footer class="bg-white sticky-footer">
                 <div class="container my-auto">
