updated navigation bar

--- a/quarantine.html
+++ b/quarantine.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Page Not Found - KeralaCovid-19</title>
+    <title>Quarantine Reports - KeralaCovid-19</title>
     <meta name="description" content="Kerala Covid-19 Analysis">
     <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/logo.png">
     <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/logo.png">
@@ -94,14 +94,10 @@
                     </div>
                 </nav>
                 <div class="container-fluid">
-                    <div class="text-center mt-5">
-                        <div class="error mx-auto" data-text="404">
-                            <p class="m-0">404</p>
-                        </div>
-                        <p class="text-dark mb-5 lead">Page Not Found</p>
-                        <p class="text-black-50 mb-0">It looks like you found a glitch in the matrix...</p><a href="/">← Back to Dashboard</a></div>
-                </div>
-            </div>
+                    <h3 class="text-dark container-fluid">&nbsp; &nbsp; Quarantine Analysis</h3>
+                </div><img id="quarantinecurrentstatuss" class="img-fluid" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Districtwise/reports/quarantine/current_status.png?raw=true"><img class="img-fluid" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Districtwise/reports/quarantine/consistant2day.png?raw=true">
+                <img
+                    id="quarantinedistrictwise" class="img-fluid" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Districtwise/reports/quarantine/districcontrib.png?raw=true"></div>
             <footer class="bg-white sticky-footer">
                 <div class="container my-auto">
                     <div class="text-center my-auto copyright"><span>Copyright © KeralaCovid-19 2020</span></div>
