--- a/statewise.html
+++ b/statewise.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Page Not Found - KeralaCovid-19</title>
+    <title>Statewise Analysis - KeralaCovid-19</title>
     <meta name="description" content="Kerala Covid-19 Analysis">
     <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/logo.png">
     <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/logo.png">
@@ -28,11 +28,11 @@
                     <div class="container-fluid d-flex flex-column p-0">
                         <a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
                             <div class="sidebar-brand-icon rotate-n-15"><i class="material-icons">ac_unit</i></div>
-                            <div class="sidebar-brand-text mx-3"><span>Keralacovid'19</span></div>
+                            <div class="sidebar-brand-text mx-3"><span>Kerala - covid'19</span></div>
                         </a>
                         <hr class="sidebar-divider my-0">
                         <ul class="nav navbar-nav text-light" id="accordionSidebar">
-                            <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-user-alt"></i><span>&nbsp;Dashboard</span></a></li>
+                            <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-user"></i><span>&nbsp;Dashboard</span></a></li>
                             <hr class="sidebar-divider">
                             <div class="sidebar-heading">
                                 <p class="mb-0">Overall Analysis</p>
@@ -47,11 +47,11 @@
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <div><a class="btn btn-link nav-link" data-toggle="collapse" aria-expanded="false" aria-controls="collapse-2" href="#collapse-2" role="button"><i class="fa fa-square-o"></i>&nbsp;<span>Districtwise</span></a>
+                                <div><a class="btn btn-link nav-link" data-toggle="collapse" aria-expanded="false" aria-controls="collapse-2" href="#collapse-2" role="button"><i class="far fa-square"></i>&nbsp;<span>Districtwise</span></a>
                                     <div class="collapse"
                                         id="collapse-2">
                                         <div class="bg-white border rounded py-2 collapse-inner">
-                                            <h6 class="collapse-header">check</h6><a class="collapse-item" href="districtwise.html#districtwiseactivecases">Active Cases</a><a class="collapse-item" href="districtwise.html#districtwisedeathreport">Death Report</a></div>
+                                            <h6 class="collapse-header">Check</h6><a class="collapse-item" href="districtwise.html#districtwiseactivecases">Active Cases</a><a class="collapse-item" href="districtwise.html#districtwisedeathreport">Death Report</a></div>
                                     </div>
                                 </div>
                             </li>
@@ -64,7 +64,7 @@
                                     <div class="collapse"
                                         id="collapse-3">
                                         <div class="bg-white border rounded py-2 collapse-inner">
-                                            <h6 class="collapse-header">check</h6><a class="collapse-item" href="quarantine.html#quarantinecurrentstatuss">Current Status</a><a class="collapse-item" href="quarantine.html#quarantinedistrictwise">Districtwise Analysis</a></div>
+                                            <h6 class="collapse-header">Check</h6><a class="collapse-item" href="quarantine.html#quarantinecurrentstatuss">Current Status</a><a class="collapse-item" href="quarantine.html#quarantinedistrictwise">Districtwise Analysis</a></div>
                                     </div>
                                 </div>
                                 <div id="collapsePages" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar" aria-controls="collapsePages">
@@ -73,7 +73,7 @@
                                         <h6 class="collapse-header">OTHER PAGES:</h6><a class="collapse-item" href="#">404 Page</a><a class="collapse-item" href="#">Blank Page</a></div>
                                 </div>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="statewise.html#statewisedeathreport"><i class="fas fa-chart-bar"></i><span>&nbsp;Death Report</span></a></li>
+                            <li class="nav-item"><a class="nav-link" href="#statewisedeathreport"><i class="fas fa-chart-area"></i><span>&nbsp;Death Report</span></a></li>
                             <li class="nav-item"><a class="nav-link" href="index.html#todays-report"><i class="fas fa-angle-double-right"></i><span>&nbsp;Current Status</span></a></li>
                             <hr class="sidebar-divider">
                         </ul>
@@ -93,14 +93,14 @@
                         </form>
                     </div>
                 </nav>
-                <div class="container-fluid">
-                    <div class="text-center mt-5">
-                        <div class="error mx-auto" data-text="404">
-                            <p class="m-0">404</p>
-                        </div>
-                        <p class="text-dark mb-5 lead">Page Not Found</p>
-                        <p class="text-black-50 mb-0">It looks like you found a glitch in the matrix...</p><a href="/">← Back to Dashboard</a></div>
+                <div class="row">
+                    <div class="col">
+                        <h4 class="container-fluid"><br>Statewise Analysis<br><br></h4>
+                    </div>
                 </div>
+                <h3 class="container-fluid"><img id="statewisedaily" class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Statewise/reports/Daily_Cases.png?raw=true"><img class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Statewise/reports/Contact_Cases.png?raw=true">
+                    <img
+                        id="statewisedeathreport" class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Statewise/reports/Death_rate.png?raw=true"><img id="contactcasesanalysis" class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Statewise/reports/Contact_Cases_wrt_covidcases.png?raw=true"></h3>
             </div>
             <footer class="bg-white sticky-footer">
                 <div class="container my-auto">
