--- a/districtwise.html
+++ b/districtwise.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Page Not Found - KeralaCovid-19</title>
+    <title>Districtwise Analysis - KeralaCovid-19</title>
     <meta name="description" content="Kerala Covid-19 Analysis">
     <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/logo.png">
     <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/logo.png">
@@ -93,20 +93,17 @@
                         </form>
                     </div>
                 </nav>
+                <h4 class="container-fluid">Districtwise&nbsp; Analysis</h4>
                 <div class="container-fluid">
-                    <div class="text-center mt-5">
-                        <div class="error mx-auto" data-text="404">
-                            <p class="m-0">404</p>
-                        </div>
-                        <p class="text-dark mb-5 lead">Page Not Found</p>
-                        <p class="text-black-50 mb-0">It looks like you found a glitch in the matrix...</p><a href="/">← Back to Dashboard</a></div>
-                </div>
-            </div>
-            <footer class="bg-white sticky-footer">
+                    <h3 class="text-dark mb-1"></h3>
+                </div><img id="districtwiseactivecases" class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Districtwise/reports/covid_case_study/active_cases.png?raw=true"><img class="img-fluid img-thumbnail"
+                    src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Districtwise/reports/covid_case_study/districtcontrib.png?raw=true"><img id="districtwisedeathreport" class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Districtwise/reports/covid_case_study/deathrate.png?raw=true"></div>
+            <footer
+                class="bg-white sticky-footer">
                 <div class="container my-auto">
                     <div class="text-center my-auto copyright"><span>Copyright © KeralaCovid-19 2020</span></div>
                 </div>
-            </footer>
+                </footer>
         </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a></div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
