--- a/testresults.html
+++ b/testresults.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Page Not Found - KeralaCovid-19</title>
+    <title>Test Results - KeralaCovid-19</title>
     <meta name="description" content="Kerala Covid-19 Analysis">
     <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/logo.png">
     <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/logo.png">
@@ -94,13 +94,9 @@
                     </div>
                 </nav>
                 <div class="container-fluid">
-                    <div class="text-center mt-5">
-                        <div class="error mx-auto" data-text="404">
-                            <p class="m-0">404</p>
-                        </div>
-                        <p class="text-dark mb-5 lead">Page Not Found</p>
-                        <p class="text-black-50 mb-0">It looks like you found a glitch in the matrix...</p><a href="/">← Back to Dashboard</a></div>
+                    <h3 class="text-dark mb-1">Test Results Analysis</h3>
                 </div>
+                <div class="alert alert-success mt-4" role="alert"><span class="container-fluid"><strong>Loading.. Check status&nbsp;</strong><i class="fa fa-github"></i><a class="alert-link" href="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Test_Results/Analysis_Test_Results_with_Prediction.ipynb">&nbsp;here</a><br></span></div>
             </div>
             <footer class="bg-white sticky-footer">
                 <div class="container my-auto">
