added testresults images

--- a/404.html
+++ b/404.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="assets/fonts/line-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/material-icons.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
+    <link rel="stylesheet" href="assets/css/Testimonials.css">
     <link rel="stylesheet" href="assets/css/untitled.css">
 <link rel="icon" href="logo.png" type = "image/x-icon">
 <title> Statewise Analysis </title>
@@ -103,6 +104,18 @@
                 </div>
             </div>
             <footer class="bg-white sticky-footer">
+                <div class="container container-fluid">
+                    <div class="intro">
+                        <h2 class="text-center">Prediction of new positive on date 15/09/2020</h2>
+                        <p class="text-center">Prediction of new positive rate on the basis of various features such as&nbsp;Total_Sent, Sent_On_Date, Proceed_In_24_Hr,Total_Positive<br><br></p>
+                    </div>
+                    <div class="row people">
+                        <div class="col-md-6 col-lg-4 item">
+                            <div class="box"></div>
+                            <div class="author"><img class="rounded-circle" src="assets/img/testresults/models.png"></div>
+                        </div>
+                    </div>
+                </div>
                 <div class="container my-auto">
                     <div class="text-center my-auto copyright"><span>Copyright © KeralaCovid-19 2020</span></div>
                 </div>
