--- a/testresults.html
+++ b/testresults.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="assets/fonts/line-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/material-icons.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
+    <link rel="stylesheet" href="assets/css/Testimonials.css">
     <link rel="stylesheet" href="assets/css/untitled.css">
 <link rel="icon" href="logo.png" type = "image/x-icon">
 <title> Statewise Analysis </title>
@@ -97,6 +98,17 @@
                     <h3 class="text-dark mb-1">Test Results Analysis</h3>
                 </div>
                 <div class="alert alert-success mt-4" role="alert"><span class="container-fluid"><strong>Loading.. Check status&nbsp;</strong><i class="fa fa-github"></i><a class="alert-link" href="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Test_Results/Analysis_Test_Results_with_Prediction.ipynb">&nbsp;here</a><br></span></div>
+                <img
+                    class="img-fluid img-thumbnail" src="assets/img/testresults/Proceedin24.png"><img class="img-fluid img-thumbnail" src="assets/img/testresults/sentondate.png">
+                    <div class="container container-fluid">
+                        <div class="intro">
+                            <h2 class="text-center container-fluid mt-4">Prediction on new positive&nbsp; rate&nbsp;</h2>
+                            <p class="text-center container-fluid">Prediction of new positive rate on the basis of various features such as&nbsp;Total_Sent, Sent_On_Date, Proceed_In_24_Hr,Total_Positive<br></p>
+                        </div>
+                        <div class="row people">
+                            <div class="col"><img class="rounded-circle img-fluid" src="assets/img/testresults/models.png"></div>
+                        </div>
+                    </div>
             </div>
             <footer class="bg-white sticky-footer">
                 <div class="container my-auto">
@@ -104,6 +116,7 @@
                 </div>
             </footer>
         </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a></div>
+    <div class="testimonials-clean"></div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
