added testresults image src

--- a/testresults.html
+++ b/testresults.html
@@ -96,8 +96,9 @@
                 </nav>
                 <div class="container-fluid">
                     <h3 class="text-dark mb-1">Test Results Analysis</h3>
-                </div><img class="img-fluid img-thumbnail" src="assets/img/testresults/Proceedin24.png"><img class="img-fluid img-thumbnail" src="assets/img/testresults/sentondate.png">
-                <div class="container container-fluid">
+                </div><img class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Test_Results/results/Proceedin24.png?raw=true"><img class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Test_Results/results/sentondate.png?raw=true">
+                <div
+                    class="container container-fluid">
                     <div class="intro">
                         <h2 class="text-center container-fluid mt-4">Prediction on new positive&nbsp; rate&nbsp;</h2>
                         <p class="text-center container-fluid">Prediction of new positive rate on the basis of various features such as&nbsp;Total_Sent, Sent_On_Date, Proceed_In_24_Hr,Total_Positive<br></p>
@@ -107,14 +108,14 @@
                             <div class="alert alert-success mt-4 container-fluid" role="alert"><span class="container-fluid"><strong>check out the code&nbsp;</strong><i class="fa fa-github"></i><a class="alert-link" href="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Test_Results/Analysis_Test_Results_with_Prediction.ipynb">&nbsp;here</a><br></span></div>
                         </div>
                     </div>
-                </div>
             </div>
-            <footer class="bg-white sticky-footer">
-                <div class="container my-auto">
-                    <div class="text-center my-auto copyright"><span>Copyright © KeralaCovid-19 2020</span></div>
-                </div>
-            </footer>
-        </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a></div>
+        </div>
+        <footer class="bg-white sticky-footer">
+            <div class="container my-auto">
+                <div class="text-center my-auto copyright"><span>Copyright © KeralaCovid-19 2020</span></div>
+            </div>
+        </footer>
+    </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a></div>
     <div class="testimonials-clean"></div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
