--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                             <h3 id="todays-report" class="container-fluid mt-5">Reports on 24 sep 2020</h3>
                             <div class="row mt-4">
                                 <div class="col-lg-6 mb-4">
-                                    <div class="card text-white bg-primary shadow">
+                                    <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
                                             <p class="m-0">Today's Positive</p>
                                             <p class="text-white-50 small m-0"></p>
@@ -217,7 +217,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-6 mb-4">
-                                    <div class="card text-white bg-success shadow">
+                                    <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
                                             <p class="m-0">Total Positive</p>
                                             <p class="text-white-50 small m-0">&nbsp;45926<br></p>
@@ -225,7 +225,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-6 mb-4">
-                                    <div class="card text-white bg-info shadow">
+                                    <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
                                             <p class="m-0">Contact cases</p>
                                             <p class="m-0"></p>
@@ -234,7 +234,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-6 mb-4">
-                                    <div class="card text-white bg-warning shadow">
+                                    <div class="card text-white bg-success shadow">
                                         <div class="card-body">
                                             <p class="m-0">Patients Relieved</p>
                                             <p class="text-white-50 small m-0">3168<br></p>
@@ -250,7 +250,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-6 mb-4">
-                                    <div class="card text-white bg-secondary shadow">
+                                    <div class="card text-white bg-warning shadow">
                                         <div class="card-body">
                                             <p class="m-0">Death Rate</p>
                                             <p class="text-white-50 small m-0">21</p>
