--- a/index.html
+++ b/index.html
@@ -205,14 +205,14 @@
                     <section></section>
                     <div class="row" id="currentstatus-1">
                         <div class="col">
-                            <h3 id="todays-report" class="container-fluid mt-5">Reports on 26 sep 2020</h3>
+                            <h3 id="todays-report" class="container-fluid mt-5">Reports on 27 sep 2020</h3>
                             <div class="row mt-4">
                                 <div class="col-lg-6 mb-4">
                                     <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
                                             <p class="m-0">Today's Positive</p>
                                             <p class="text-white-50 small m-0"></p>
-                                            <p class="text-white-50 small m-0">7006<br></p>
+                                            <p class="text-white-50 small m-0">7445<br></p>
                                         </div>
                                     </div>
                                 </div>
@@ -220,7 +220,7 @@
                                     <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
                                             <p class="m-0">Total Positive</p>
-                                            <p class="text-white-50 small m-0">&nbsp;52685&nbsp;<br></p>
+                                            <p class="text-white-50 small m-0">&nbsp;-<br></p>
                                         </div>
                                     </div>
                                 </div>
@@ -229,7 +229,7 @@
                                         <div class="card-body">
                                             <p class="m-0">Contact cases</p>
                                             <p class="m-0"></p>
-                                            <p class="text-white-50 small m-0">6004</p>
+                                            <p class="text-white-50 small m-0">6965</p>
                                         </div>
                                     </div>
                                 </div>
@@ -237,7 +237,7 @@
                                     <div class="card text-white bg-success shadow">
                                         <div class="card-body">
                                             <p class="m-0">Patients Relieved</p>
-                                            <p class="text-white-50 small m-0">3199<br></p>
+                                            <p class="text-white-50 small m-0">3391<br></p>
                                         </div>
                                     </div>
                                 </div>
@@ -245,7 +245,7 @@
                                     <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
                                             <p class="m-0">Unknown Sources</p>
-                                            <p class="text-white-50 small m-0">664</p>
+                                            <p class="text-white-50 small m-0">561</p>
                                         </div>
                                     </div>
                                 </div>
