--- a/testresults.html
+++ b/testresults.html
@@ -86,7 +86,7 @@
             </div>
         </nav>
         <div class="d-flex flex-column" id="content-wrapper">
-            <div id="content">
+            <div id="content" style="text-align: center;">
                 <nav class="navbar navbar-light navbar-expand bg-white shadow mb-4 topbar static-top">
                     <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle mr-3" id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button>
                         <form class="form-inline d-none d-sm-inline-block mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
@@ -96,26 +96,26 @@
                 </nav>
                 <div class="container-fluid">
                     <h3 class="text-dark mb-1">Test Results Analysis</h3>
-                </div><img class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Test_Results/results/Proceedin24.png?raw=true"><img class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Test_Results/results/sentondate.png?raw=true">
-                <div
-                    class="container container-fluid">
+                </div><img class="img-fluid img-thumbnail" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Test_Results/results/Proceedin24.png?raw=true" style="text-align: center;"><img class="img-fluid justify-content-center align-items-center align-content-center align-self-center mx-auto img-fluid img-thumbnail"
+                    src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Test_Results/results/sentondate.png?raw=true" style="text-align: center;">
+                <div class="container-fluid text-center container-fluid">
                     <div class="intro">
                         <h4 class="text-center container-fluid mt-4">Prediction on new positive&nbsp; rate&nbsp;</h4>
                         <p class="text-center container-fluid">Prediction of new positive rate on the basis of various features such as&nbsp;Total_Sent, Sent_On_Date, Proceed_In_24_Hr,Total_Positive<br></p>
-                    </div><img class="img-fluid" src="assets/img/testresults/multilinearregression.png">
+                    </div><img class="img-fluid" src="assets/img/testresults/miniGif_20201002191541[1].gif">
                     <div class="row people">
                         <div class="col container-fluid">
                             <div class="alert alert-success mt-4 container-fluid" role="alert"><span class="container-fluid"><strong>check out the code&nbsp;</strong><i class="fa fa-github"></i><a class="alert-link" href="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Test_Results/Analysis_Test_Results_with_Prediction.ipynb">&nbsp;here</a><br></span></div>
                         </div>
                     </div>
+                </div>
             </div>
-        </div>
-        <footer class="bg-white sticky-footer">
-            <div class="container my-auto">
-                <div class="text-center my-auto copyright"><span>Copyright © KeralaCovid-19 2020</span></div>
-            </div>
-        </footer>
-    </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a></div>
+            <footer class="bg-white sticky-footer">
+                <div class="container my-auto">
+                    <div class="text-center my-auto copyright"><span>Copyright © KeralaCovid-19 2020</span></div>
+                </div>
+            </footer>
+        </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a></div>
     <div class="testimonials-clean"></div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
